src/test/ui/did_you_mean/issue-34337.nll.stderr
error[E0596]: cannot borrow immutable item `key` as mutable
  --> $DIR/issue-34337.rs:16:9
   |
LL |     let ref mut key = v[0];
   |         ----------- consider changing this to `mut key`
LL |     get(&mut key); //~ ERROR cannot borrow
   |         ^^^^^^^^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
